# ChangeLog for games-util/aabrowse
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-util/aabrowse/ChangeLog,v 1.8 2006/12/06 21:13:04 wolf31o2 Exp $

  06 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> aabrowse-0.0.8.ebuild:
  Remove old virtual/x11 dependency.

  27 Apr 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-aabrowse-0.0.6, files/digest-aabrowse-0.0.8, Manifest:
  Fixing SHA256 digest, pass four

  28 Jan 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  aabrowse-0.0.6.ebuild, aabrowse-0.0.8.ebuild:
  Add modular X dependencies.

  25 Jul 2005; Caleb Tennis <caleb@gentoo.org> aabrowse-0.0.6.ebuild,
  aabrowse-0.0.8.ebuild:
  Change qt dep per bug #100235

  19 Jul 2005; David Holm <dholm@gentoo.org> aabrowse-0.0.8.ebuild:
  Added to ~ppc.

  07 Dec 2004; Michael Sterrett <mr_bones_@gentoo.org> aabrowse-0.0.8.ebuild:
  fix possible sandbox violation

*aabrowse-0.0.8 (07 Dec 2004)

  07 Dec 2004; Michael Sterrett <mr_bones_@gentoo.org> +aabrowse-0.0.8.ebuild:
  version bump

*aabrowse-0.0.6 (25 Aug 2004)

  25 Aug 2004; Michael Sterrett <mr_bones_@gentoo.org> +metadata.xml,
  +aabrowse-0.0.6.ebuild:
  initial commit; ebuild based on the one provided by Ron Simpkin via bug #55830
