@@ -1,4 +1,4 @@
 DIST aabrowse-0.0.8.tar.gz 704581 RMD160 de445f9c0f0d876d074e7eae2ea877c2e405bc50 SHA1 6c12746d4b5d4935877d1190ad59951bb95ede35 SHA256 99bd5ab241af696b484dcdcdc1cc3f0fb1bebd29a2b4f6543125aac62b6e7c9b
-EBUILD aabrowse-0.0.8.ebuild 885 RMD160 e6ff20d162f72917fd6badfe2fe99438154e6918 SHA1 c8f9fd0ec3ae084470e856c0287a1f4d17001fa8 SHA256 9e2cb76729c86a6fc020dfcc396917d3cafaaffc49d2a4f2973780eb84d1bd01
-MISC ChangeLog 1279 RMD160 eab1b34d88bc69ef4311718e052534d782056fb5 SHA1 c648c5acf1126e3697a2d10cdbca51e5ae60bef1 SHA256 607765ca7f41152ea4b7aa5a3db4b95d95ea9d8e15be01bfa97b63973091e522
+EBUILD aabrowse-0.0.8.ebuild 882 RMD160 df9f4c249efc3fb3dffe3d8607ad8d5edc633c5f SHA1 a123758d59931696c86166cc80a186c0ef6d36e7 SHA256 64ad21b6c294fd14315d535b1979212d568f94d1ad51aa597e9a4917119c7381
+MISC ChangeLog 1395 RMD160 2c046cef2caf0bb5005dbd77a564879698d8b7d3 SHA1 fd1b373127dedc8e07c4bea8e808c5140d579823 SHA256 036079179e48fb6c9253f0775c5d1574ef75f4aa3470e31f13fd5ca22194c8e2
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
