@@ -1,6 +1,8 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-util/aabrowse/aabrowse-0.0.8.ebuild,v 1.6 2006/12/06 21:13:04 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-util/aabrowse/aabrowse-0.0.8.ebuild,v 1.7 2008/07/27 21:34:12 carlo Exp $
+
+EAPI=1
 
 inherit kde
 
@@ -16,7 +18,7 @@ IUSE="geoip"
 RDEPEND="x11-libs/libXext
 	x11-libs/libSM"
 DEPEND="${RDEPEND}
-	$(qt_min_version 3.2)
+	x11-libs/qt:3
 	sys-libs/zlib
 	media-libs/libpng
 	geoip? ( >=dev-libs/geoip-1.3.0 )"
