@@ -1,6 +1,9 @@
 # ChangeLog for games-util/aabrowse
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-util/aabrowse/ChangeLog,v 1.8 2006/12/06 21:13:04 wolf31o2 Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-util/aabrowse/ChangeLog,v 1.9 2008/07/27 21:34:12 carlo Exp $
+
+  27 Jul 2008; Carsten Lohrke <carlo@gentoo.org> aabrowse-0.0.8.ebuild:
+  QA: Get rid of deprecated qt_min_version().
 
   06 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> aabrowse-0.0.8.ebuild:
   Remove old virtual/x11 dependency.
